--- a/test.html
+++ b/test.html
@@ -9,6 +9,21 @@
     <h1>Überschrift</h1>
     <p>Dies ist ein Test. Hallo Welt.</p> 
   </body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>JavaScript: Hallo Welt</title>
+    <script>
+      alert("Hallo Welt!");
+    </script>
+    <noscript>
+      Sie haben JavaScript deaktiviert.
+    </noscript>
+  </head>
+  <body>
+    <p>Diese Seite tut nichts weiter, als eine Hinweisbox auszugeben.</p>
+  </body>
 </html>
 
 
